# sdsl-lite

./: .clang-format  .cmake-format.yaml  .gitmodules  .jenkinsfile  .travis.yml  CMakeLists.txt  Make.helper.cmake  README.md  install.sh  sdsl-lite.pc.cmake
.github/workflows/: ci_asan.yml  ci_header.yml  ci_linux.yml  ci_macos.yml  lint.yml
CMakeModules/: AppendCompilerFlags.cmake  BMI.cpp  BMI2.cpp  CompilerFlags.cmake  DetectCPUFeatures.cmake  FindCxaDemangle.cmake  MODETI.cpp  ParseVersionFile.cmake  SSE42.cpp
benchmark/document_retrieval/src/: doc_list_index_greedy.hpp  doc_list_index_sada.hpp  doc_list_index_sort.hpp  query_idx.cpp  word_pat2char_pat.cpp
benchmark/k2_trees/src/: k2_time_and_space.cpp
benchmark/rrr_vector/src/: generate_rnd_bitvector.cpp  rrr_time_and_space.cpp
benchmark/self_delimiting_codes/src/: sdc_benchmark.cpp
benchmark/suffix_trees/src/: depth_stats.cpp  time_and_space_cst.cpp
benchmark/wavelet_trees/src/: wt_time_and_space.cpp
examples/: CMakeLists.txt  Makefile  c++11-initializer-list.cpp  construct-in-memory.cpp  cst-node-child-iterator.cpp  fm-index.cpp  fm-rmq-index.cpp  hugepages.cpp  int-vector-buffer-iterator.cpp  intersect.cpp  isa_access.cpp  k2_treap_in_mem.cpp  louds-tree.cpp  mem-vis.cpp  node_iterator.cpp  print_wt.cpp  range-minimum-queries.cpp  sa-int-construct-from-file.cpp  sd_vector_benchmark.cpp  store_to_file.cpp  text-statistics.cpp  uint64-array2int_vector.cpp  wt_ap.cpp
extras/: CMakeLists.txt  pre-commit.cmake
include/sdsl/: .gitignore  CMakeLists.txt  bit_vector_il.hpp  bit_vectors.hpp  bits.hpp  bits.hpp.cmake  bp_support.hpp  bp_support_algorithm.hpp  bp_support_g.hpp  bp_support_gg.hpp  bp_support_sada.hpp  cereal.hpp  coder.hpp  coder_comma.hpp  coder_elias_delta.hpp  coder_elias_gamma.hpp  coder_fibonacci.hpp  config.hpp  construct.hpp  construct_bwt.hpp  construct_config.hpp  construct_isa.hpp  construct_lcp.hpp  construct_lcp_helper.hpp  construct_sa.hpp  construct_sa_se.hpp  csa_alphabet_strategy.hpp  csa_bitcompressed.hpp  csa_sada.hpp  csa_sada2.hpp  csa_sampling_strategy.hpp  csa_wt.hpp  cst_fully.hpp  cst_iterators.hpp  cst_sada.hpp  cst_sct3.hpp  dac_vector.hpp  definitions.hpp.cmake  divsufsort.hpp  enc_vector.hpp  (+87 more)
lib/: CMakeLists.txt  bits.cpp  bp_support_algorithm.cpp  coder_elias_delta.cpp  coder_elias_gamma.cpp  coder_fibonacci.cpp  config.cpp  construct_config.cpp  construct_isa.cpp  construct_lcp.cpp  construct_lcp_helper.cpp  construct_sa.cpp  construct_sa_se.cpp  csa_alphabet_strategy.cpp  io.cpp  lcp_support_tree.cpp  louds_tree.cpp  memory_management.cpp  nn_dict_dynamic.cpp  ram_filebuf.cpp  ram_fs.cpp  rrr_vector_15.cpp  sd_vector.cpp  sfstream.cpp  structure_tree.cpp.cmake  uint128_t.cpp  uint256_t.cpp  util.cpp.cmake  wt_helper.cpp
test/: CMakeLists.txt  README.md  bit_vector_generator.cpp  bit_vector_test.1.typedef  bit_vector_test.cpp  bit_vector_test.cpp.cmake  bit_vector_test.typedef  bits_test.cpp  coder_test.cpp  common.hpp  compile_test.cpp.cmake  csa_byte_test.1.typedef  csa_byte_test.cpp  csa_byte_test.cpp.cmake  csa_byte_test.typedef  csa_int_test.1.typedef  csa_int_test.cpp  csa_int_test.cpp.cmake  csa_int_test.typedef  cst_byte_test.1.typedef  cst_byte_test.cpp  cst_byte_test.cpp.cmake  cst_byte_test.typedef  cst_helper.hpp  cst_int_test.1.typedef  cst_int_test.cpp  cst_int_test.cpp.cmake  cst_int_test.typedef  divsufsort_test.cpp  divsufsort_test.cpp.cmake  download.cmake  download_files.cmake  int_vector_buffer_test.cpp  int_vector_generator.cpp  int_vector_mapper_test.cpp  int_vector_test.cpp  inv_perm_support_test.cpp  k2_treap_test.cpp  k2_tree_test.cpp  lcp_construct_test.cpp  (+25 more)
test/header/: CMakeLists.txt
test/performance/: int_vector_end.cpp
tutorial/: CMakeLists.txt  Makefile  cst-search.cpp  csx-printf.cpp  expl-01.cpp  expl-02.cpp  expl-04.cpp  expl-05.cpp  expl-06.cpp  expl-07.cpp  expl-08.cpp  expl-09.cpp  expl-10.cpp  expl-11.cpp  expl-12.cpp  expl-13.cpp  expl-14.cpp  expl-15.cpp  expl-16.cpp  expl-18.cpp  expl-22.cpp  expl-24.cpp  expl-25.cpp  expl-26.cpp  int-vector-tutorial.cpp  rmq-example.cpp
